Closed
Bug 865024
Opened 13 years ago
Closed 13 years ago
IonMonkey: Assertion failure: !minimalInterval(interval), at ion/BacktrackingAllocator.cpp:508
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
|
1.07 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
The following testcase asserts on mozilla-central revision aa620f3fc2f7 (run with --ion-regalloc=backtracking --ion-eager):
var d = new FakeDOMObject();
for (var i=0; i<100; i++) {
d.x = 10;
}
Comment 1•13 years ago
|
||
jsfunfuzz hit this as well.
Updated•13 years ago
|
Flags: needinfo?(bhackett1024)
Comment 2•13 years ago
|
||
This looks like a bug when lowering SetDOMProperty. The instruction wants to use the same registers for its input as it does for some of its temps, which the backtracking allocator can't find a way to satisfy. Judging from the surrounding comments the input registers should be distinct from the temporary ones.
Attachment #744248 -
Flags: review?(jdemooij)
Flags: needinfo?(bhackett1024)
Updated•13 years ago
|
Attachment #744248 -
Flags: review?(jdemooij) → review+
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•