Bug 865024 - Avoid using overlapping registers when lowering SetDOMProperty, r=jandem.